deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wreck-the-web
  labels:
    app.kubernetes.io/name: wreck-the-web
