deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wreck-the-web
  namespace: wreck-the-web
  labels:
    app.kubernetes.io/name: wreck-the-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wreck-the-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
